[package]
name = "calculator"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
tonic = "0.12.1"
prost = "0.13.1"
tokio = { version = "1.39.2", features = ["full"] }
tonic-reflection = "0.12.1"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
